[package]
name = "rs-rigger-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
bastion = "0.4.5"
syn = {version = "1.0.86", features = ["extra-traits", "full", "fold"]}
quote = "1.0.15"
